# nanana

./: .dockerignore  .gitignore  .ruff.toml  AGENTS.md  Dockerfile  README.md  build.sh  pixi.toml  pyproject.toml
.github/workflows/: docker-publish.yml
src/nanana/: __init__.py  cli.py
src/nanana/command/: assem.py  cluster.py  hydrate.py  plot.py  polish.py  setup_taxonkit.py
src/nanana/lib/: cli_helpers.py  cluster.py  cluster_pipeline.py  fasta.py  hydrate.py  kmer.py  plotting.py  taxon.py
