[project]
authors = [{name = "Preecha Patumcharoenpol", email = "preecha.pat@mahidol.ac.th"}]
dependencies = [
]

name = "nanana"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.scripts]
nanana = "nanana.cli:main"
nanana-clust = "nanana.command.cluster:main"
nanana-hydrate = "nanana.command.hydrate:main"
nanana-plot = "nanana.command.plot:main"
nanana-setup = "nanana.command.setup_taxonkit:main"
nanana-polish = "nanana.command.polish:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nanana"]
